RbA Build/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>SVMXC__Dispatch_Console_Settings__c</fullName>
        <label>Dispatch Console Settings</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__FaceTime_ID__c</fullName>
        <description>User&apos;s FaceTime login ID. Used to make FaceTime calls in ServiceMax iPad Client. If this is left blank, user&apos;s phone number and email are used for the call.</description>
        <inlineHelpText>Enter this user&apos;s FaceTime login ID if available. This is used to make FaceTime calls in ServiceMax iPad Client. If this is left blank, user&apos;s phone number and email are used for the call.</inlineHelpText>
        <label>FaceTime ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Super_Dispatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if user is Super Dispatcher.</description>
        <inlineHelpText>Flag to indicate if user is Super Dispatcher.</inlineHelpText>
        <label>Is Super Dispatcher?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__ServiceMax_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if User is a ServiceMax User</description>
        <label>ServiceMax User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <label>Store Location</label>
        <picklist>
            <picklistValues>
                <fullName>77 - Twin Cities, MN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Back_Office_Checklist_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked the user has the ability to update the Back Office Checklist fields once they&apos;ve been saved.</inlineHelpText>
        <label>Update Back Office Checklist Fields</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>